:recycle: refactor: Follow 목록 조회 로직 구조 개선